# teammate-comms

./: .gitattributes  .gitignore  AUDIT-v0.7.0.md  BACKLOG.md  CHANGELOG.md  DESIGN.md  README.md  WP-15-cross-session-inbox-suppression.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cognition/: .gitignore  journal.jsonl
.github/workflows/: ci.yml
docs/: 260701-fable-audit-consumer.md  260701-fable-audit-interconnectivity.md  260701-fable-audit-systems.md
docs/briefs/: QUEUE-fable-audit.md  WP-16-protocol-core.md  WP-17-hotpath-storage.md  WP-18-test-integrity-ci.md  WP-19-identity-ownership.md  WP-20-deletion-liveness.md  WP-21-presence-names.md  WP-22-watcher-robustness.md  WP-23-spawn-platform.md  WP-24-gate-and-autoregister.md  WP-25-storage-scale.md  WP-26-message-ids.md  WP-27-compaction.md  WP-28-avatars.md  WP-29-dashboard-diagnostics.md  WP-30-harness-contracts.md  WP-31-tool-surface.md  WP-32-docs-release.md  WP-33-test-gaps.md  WP-36-broker-registration-fields.md  WP-37-request-compact-tool.md  WP-38-broker-deliver-cli.md  WP-39-compact-request-manager-alert.md  WP-41-optin-registration.md  WP-42-auto-ack-on-read.md
docs/history/: MANAGEMENT-LEDGER.md  WP-13-project-profiles.md  WP-14-teammate-avatars.md
hooks/: hooks.json  reinject-instructions.sh  session-start.sh
skills/teammate-comms/: SKILL.md
src/teammate_comms/: __init__.py  avatars.py  channel.py  comms.py  dashboard.py  deliver.py  instructions.py  server.py  spawn.py  tools.py
tests/: test_compact.py  test_handshake.py  test_wp13_projects.py  test_wp14_avatars.py
(+1 files in other folders)
