[project]
name = "teammate-comms"
version = "0.13.1"
description = "Agent-to-agent messaging with channel-based idle wake for full Claude Code instances."
authors = [{ name = "ColtonDyck" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
# Pure stdlib — no third-party runtime dependencies (this is deliberate: it keeps
# the MCP spawn instant and avoids a dependency tree blocking the stdio handshake).
dependencies = []
keywords = ["mcp", "channel", "agent", "messaging"]

[project.optional-dependencies]
images = ["Pillow>=10"]

[project.scripts]
teammate-comms = "teammate_comms.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teammate_comms"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
